@@ -1,2 +1,2 @@
 libnames := camdata
-libsrcs_camdata := src/FrameFexConfigV1.cc src/FrameV1.cc
+libsrcs_camdata := $(wildcard src/*.cc)
