@@ -11,8 +11,6 @@ namespace Pds {
 
   class Xtc {
   public:
-    Xtc() : 
-      damage(0), contains(TypeId::Any), extent(sizeof(Xtc)) {}
     Xtc(const Xtc& xtc) :
       damage(xtc.damage), src(xtc.src), contains(xtc.contains), extent(sizeof(Xtc)) {}
     Xtc(const TypeId& type) : 
